	anymore.

	Do not depend on UTF-8 locale on making plain text version of
	documentation.  Thanks to Svyatoslav Mishyn, a.k.a. juef.

	Normalized sorting keys/view column names: "type" -> "dir", display real
	mode in octal for "mode", make "type" actually display file type (as
	"mode" did before).  Thanks to Michal Belica (a.k.a. beli-sk).

	Fixed search messages in menus (nth time...).

	Fixed automatic finishing in some situation when no terminal is available.
	Thanks to tYGjQCsvVI.

	Fixed crash on navigation to end of line in command-line mode.  Thanks to
	Christian Fillion (a.k.a. cfillion).

	Fixed quite rare UI glitch right after updating 'classify'.

	Fixed UI glitch related to considering 'classify' option for ".." entry in
	directories without files.

	Fixed 'lsview' layout calculation for non-ascii names, which used too much
	space.

	Fixed 'lsview' entry highlight minor glitch related to symbolic links to
	directories.

	Fixed `:help` (no arguments) when 'vimhelp' is on and automatically
	installed Vim documentation is used.  Thanks to ranousse.

	Fixed occasional file skipping on moving files from trash directory.

	Fixed gf normal mode key on following symbolic links that target files by
	path that has symbolic links to directories.  Thanks to filterfalse.

	Fixed failing with error on changing case (gu*/gU*) when target file
	exists.

	Fixed undesired file removal on overwriting them with themselves (data
	loss after confirmation of overwriting files when destination matches
	source).  Thanks to Сергей Соловьёв (Sergej Soloviov).

	Fixed parsing of %E without field width in 'statusline'.  Thanks to
	willemw12.

	Fixed 'syscalls' documentation, which inverted its meaning.  Thanks to
	willemw12.

	Fixed current file number in progress message on moving files across file
	systems when 'syscalls' is on.  Thanks to filterfalse.

	Fixed memory leak related to list of filetypes.

	Fixed unexpected path resolution on Windows under path containing symbolic